@@ -6,6 +6,6 @@
 import pygtk
 pygtk.require('2.0')
 
-__version__ = "0.0.7.19"
+__version__ = "0.0.7.20"
 import wimpiggy
 assert wimpiggy.__version__ == __version__
